--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -15,6 +15,7 @@
      <h1>Lunch Checker</h1>
 
          <div class="form-group" >
+           <!-- empty items are considered like items i.e. "item 1, item2, ,item3", we have 4 items in this case-->
              <input id="lunch-menu" type="text" ng-model="dishes"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control">
@@ -24,7 +25,7 @@
          </div>
          <div class="form-group message">
            {{message}}
-           
+
          </div>
    </div>
 
