--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -13,17 +13,13 @@
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+      <input type="text" placeholder="search term" class="form-control" ng-model="list.searchTerm">
     </div>
     <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
+      <button class="btn btn-primary" ng-click="list.narrowItDown(list.searchTerm)">Narrow It Down For Me!</button>
     </div>
-
-    <!-- Bonus loader (see Bonus section of the assignment) -->
-    <items-loader-indicator></items-loader-indicator>
-
     <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
+    <found-items items="list.found" title="{{list.title}}" on-remove="list.removeItem(index)"></found-items>
   </div>
 
 </body>
