--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html lang="en" >
+<html ng-app= 'MenuApp' >
   <head>
     <title>MenuApp</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles/styles.css">
+    <title>Restaurant Menu</title>
   </head>
-<body ng-app= 'MenuApp'>
-   <div class="container">
+<body>
     <h1>Welcome to our Restaurant</h1>
 
     <ui-view></ui-view>
-   </div>
+
 
 
 
@@ -21,17 +21,19 @@
   <script src="lib/angular-ui-router.min.js"></script>
 
   <!-- Modules -->
-  <script src="src/menuapp/menuapp.module.js"></script>
   <script src="src/menuapp/data.module.js"></script>
+  <script src="src/menuapp/menuapp.module.js"></script>
+
 
   <!-- Routes -->
   <script src="src/routes.js"></script>
 
   <!-- 'MenuApp' module artifacts -->
-  <script src="src/menuapp/categories.component.js"></script>
-  <script src="src/menuapp/categories.controller.js"></script>
-  <!-- <script src="src/menuapp/items.component.js"></script> -->
   <script src="src/menuapp/menudata.service.js"></script>
+  <script src="src/menuapp/categories.controller.js"></script>
+  <script src="src/menuapp/categories.component.js"></script>
+  <!-- <script src="src/menuapp/items.component.js"></script> -->
+
 
 
 </body>
