--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -21,17 +21,17 @@
   <script src="lib/angular-ui-router.min.js"></script>
 
   <!-- Modules -->
-  <script src="src/menuapp/data.module.js"></script>
-  <script src="src/menuapp/menuapp.module.js"></script>
+  <script src="src/data.module.js"></script>
+  <script src="src/menuapp.module.js"></script>
 
 
   <!-- Routes -->
   <script src="src/routes.js"></script>
 
   <!-- 'MenuApp' module artifacts -->
-  <script src="src/menuapp/menudata.service.js"></script>
-  <script src="src/menuapp/categories.controller.js"></script>
-  <script src="src/menuapp/categories.component.js"></script>
+  <script src="src/menudata.service.js"></script>
+  <script src="src/categories.controller.js"></script>
+  <script src="src/categories.component.js"></script>
   <!-- <script src="src/menuapp/items.component.js"></script> -->
 
 
