--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -32,7 +32,8 @@
   <script src="src/menudata.service.js"></script>
   <script src="src/categories.controller.js"></script>
   <script src="src/categories.component.js"></script>
-  <!-- <script src="src/menuapp/items.component.js"></script> -->
+  <script src="src/items.controller.js"></script>
+  <script src="src/items.component.js"></script>
 
 
 
