--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -8,7 +8,7 @@
     <title>Restaurant Menu</title>
   </head>
 <body>
-    <h1>Welcome to our Restaurant</h1>
+    <h1>Welcome to our Chinese Restaurant</h1>
 
     <ui-view></ui-view>
 
