--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -8,11 +8,14 @@
     <title>Restaurant Menu</title>
   </head>
 <body>
+  <div class="container">
+
+
     <h1>Welcome to our Chinese Restaurant</h1>
 
     <ui-view></ui-view>
 
-
+</div>
 
 
 
