--- a/module5-solution/src/public/myInfo/myinfo.html
+++ b/module5-solution/src/public/myInfo/myinfo.html
@@ -14,7 +14,7 @@
     <br><br>
 
     Favorite dish :
-    <div class="menu-item-tile col-md-6"><br>
+    <div class="menu-item-tile col-md-6" ng-if="myInfoCtrl.dish"><br>
       <div class="row">
         <div class="col-sm-5">
           <div class="menu-item-photo">
