--- a/module5-solution/src/public/myInfo/myinfo.html
+++ b/module5-solution/src/public/myInfo/myinfo.html
@@ -13,7 +13,7 @@
     Phone : <input type="text" name="phone" ng-model="myInfoCtrl.info.phone" readonly>
     <br><br>
 
-    Favorite dish :
+  <div>Favorite dish :</div>  
     <div class="menu-item-tile col-md-6" ng-if="myInfoCtrl.dish"><br>
       <div class="row">
         <div class="col-sm-5">
